# dw_python_dbt

./: .user.yml  pyproject.toml
app/: app.py
datawarehouse/models/: schema.yml
datawarehouse/models/staging/: stg_commodities.sql  stg_movimentacao_commodities.sql
